navid/2-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: home-fe
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: home-fe
